# swe-ctf-acc-register

./: .gitignore  README.md  config.example.yaml  pyproject.toml  register_accounts.py  requirements.txt
