[project]
name = "swe-ctf-acc-register"
version = "0.1.0"
description = "Batch-register GZCTF accounts from per-cluster registration sheets."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.scripts]
swe-ctf-acc-register = "register_accounts:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["register_accounts"]
